--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/coff33/acamicommerce/issues"
   },
-  "homepage": "https://github.com/coff33/acamicommerce#readme"
+  "homepage": "https://github.com/coff33/acamicommerce#readme",
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "node-fetch": "^2.2.0"
+  }
 }
