--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/coff33/acamicommerce#readme",
   "dependencies": {
     "chalk": "^2.4.1",
-    "node-fetch": "^2.2.0"
+    "node-fetch": "^2.2.0",
+    "prompt": "^1.0.0"
   }
 }
